fixed alignment issues

--- a/the-feed/css/the-feed.css
+++ b/the-feed/css/the-feed.css
@@ -11,10 +11,10 @@ body {
     font-style: normal;
 }
 
-article{
+article {
 
     display: flex;
-    flex: row;
+    /*flex: row;*/
     flex-wrap: nowrap;
 
     justify-content: space-evenly /*center*/;
@@ -30,13 +30,13 @@ article{
 
 }
 
+article img { 
+    max-width: 20%;
+    border: 2px solid hsl(0, 0%, 75%);
+}
+
 hr {
     height: 0px;
     border: 0px;
     border-top: 2px solid black;
-}
-
-article img { 
-    max-width: 20%;
-    border: 2px solid hsl(0, 0%, 75%);
 }
